tried and failed to fix alignment of logo in header

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -11,13 +11,14 @@
 }
 
 header {
-    display: flex;
     background-color: #000000;
-    justify-content: flex-end;
+    display: flex;
     flex: wrap;
     flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
 }
 
 .logo{
-    align-items: flex-start;
+    justify-self: flex-start;
 }
